[package]
name = "stringtape"
version = "0.2.0"
edition = "2021"
description = "A tape class for strings arrays compatible with Apache Arrow"
license = "Apache-2.0"
keywords = ["arrow", "strings", "no-std", "tape", "storage"]
categories = ["data-structures", "no-std"]

[lib]
path = "stringtape.rs"

[dependencies]
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["allocator-api2/std"]
