[package]
name = "stringtape"
version = "2.3.0"
edition = "2021"
description = "A tape class for strings arrays compatible with Apache Arrow"
license = "Apache-2.0"
keywords = ["arrow", "strings", "no-std", "tape", "storage"]
categories = ["data-structures", "no-std"]

[lib]
path = "stringtape.rs"

[dependencies]
allocator-api2 = { version = "0.3", default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
arrow = { version = "53", default-features = false }

[features]
default = ["std"]
std = ["allocator-api2/std"]

[[bin]]
name = "bench_vec_string"
path = "stringtape.rs"

[[bin]]
name = "bench_vec_slice"
path = "stringtape.rs"

[[bin]]
name = "bench_chars_slices"
path = "stringtape.rs"

[[bin]]
name = "bench_chars_tape"
path = "stringtape.rs"
